<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="725dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/topFrame"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                app:srcCompat="@color/design_default_color_primary_dark" />


            <ImageView
                android:id="@+id/androidIcon"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:contentDescription="@string/profile_avatar"
                app:srcCompat="@android:mipmap/sym_def_app_icon"
                tools:ignore="VisualLintBounds" />


        </FrameLayout>

        <LinearLayout
            android:id="@+id/bioLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:useDefaultMargins="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topFrame">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Age"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/specTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Specialization"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bodyLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:useDefaultMargins="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioLinearLayout">

            <TextView
                android:id="@+id/photoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/photo"
                />

            <TextView
                android:id="@+id/projectsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/projects"
                />

            <TextView
                android:id="@+id/achievementsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/achievements"
                />
        </LinearLayout>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:columnCount="3"
            android:horizontalSpacing="8dp"
            android:useDefaultMargins="true"
            android:verticalSpacing="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyLinearLayout">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_row="0"
                android:layout_column="0"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/_024_09_28_14_55_39" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_row="0"
                android:layout_column="1"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/_024_09_28_14_55_39" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/_024_09_28_14_55_39" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/_024_09_28_14_55_39" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/_024_09_28_14_55_39" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/_024_09_28_14_55_39" />
        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>